# fiap-microservices

./: README.md  docker-compose.yaml
api1/: pyproject.toml
api1/app/: api.py
api2/: Dockerfile  pyproject.toml
api2/app/: api.py
k8s/: api1-deployment.yaml  api1-service.yaml  api2-deployment.yaml  api2-service.yaml
